# e621-wallpaper-cycle

./: Cargo.toml  README.md  check_plasma.sh  check_state.sh  config.example.toml  install.sh
plugin/e621-wallpaper/: metadata.json  ui
plugin/e621-wallpaper/contents/config/: config.qml  e621-plasma-wallpaper.service  main.xml
plugin/e621-wallpaper/contents/shaders/: chromab.frag  chromab.frag.qsb  chromab.vert  chromab.vert.qsb
plugin/e621-wallpaper/contents/ui/: config.qml  main.qml  main.xml
src/: main.rs
