[package]
name = "e621-plasma-wallpaper"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
dirs      = "5"
reqwest   = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
walkdir   = "2"
rand      = "0.8"
